tcg-salesforce/force-app/main/default/objects/BattlefieldRow__c/BattlefieldRow__c.object-meta.xml
<CustomObject>
    <label>Battlefield Row</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battlefield Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>