tcg-salesforce/force-app/main/default/objects/BattlefieldRow__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Battlefield Rows</relationshipLabel>
    <relationshipName>BattlefieldRows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>