tcg-salesforce/force-app/main/default/objects/BattlefieldRow__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Battlefield Rows</relationshipLabel>
    <relationshipName>BattlefieldRows</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>